# ECE590

./: .flaskenv  CNAME  README.md  install.sh  mqtt_test.js  package-lock.json  pyproject.toml
app/: __init__.py  config.py  db.py  index.py  notification.py  patients.py  reminders.py  slots.py
app/models/: box.py  patient.py  pill.py  reminder.py  slot.py
app/static/css/: style.css
app/static/js/: reminderScript.js
app/templates/: base.html  config.html  dashboard.html  index.html  login.html  logout.html  register.html  reminder.html  settings.html
db/: create.sql  init.sql  setup.sh
